--- a/oa2/web/WEB-INF/web.xml
+++ b/oa2/web/WEB-INF/web.xml
@@ -7,4 +7,13 @@
     <welcome-file-list>
         <welcome-file>welcome</welcome-file>
     </welcome-file-list>
+
+    <filter>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>qjl.oa.web.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>loginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
